MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Proposed_Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Beneficiary_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Beneficiary Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>