MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Proposed_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Swift_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed Swift Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>