MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Proposed_VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Proposed_VAT_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Proposed VAT Registration Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>