MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Prospect_Account__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Account</label>
    <referenceTo>Prospect_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>ProspectAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>