MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Prospect_Account_Sync_Count__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Account_Sync_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prospect Account Sync Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>