MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/PurposeOfTransaction__c.field-meta.xml
<CustomField>
    <fullName>PurposeOfTransaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Purpose of Transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>