MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/SourceOfIncome__c.field-meta.xml
<CustomField>
    <fullName>SourceOfIncome__c</fullName>
    <label>Source of Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Others (please specify)</fullName>
            </value>
            <value>
                <fullName>Business owner</fullName>
                <isActive>false</isActive>
                <label>Business owner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>