MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Trade_License_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Issue_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Issue Date</label>
    <type>Date</type>
</CustomField>