MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Trade_License_Status__c.field-meta.xml
<CustomField>
    <fullName>Trade_License_Status__c</fullName>
    <label>Trade License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>