MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/TradeLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>TradeLicenseNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>