MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/TRN__c.field-meta.xml
<CustomField>
    <fullName>TRN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TRN #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>