MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/UAEResident__c.field-meta.xml
<CustomField>
    <fullName>UAEResident__c</fullName>
    <formula>IF(ISPICKVAL( UAE_Resident_Status__pc , &quot;Resident&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UAE Resident?</label>
    <type>Text</type>
</CustomField>