MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Xebo_Id__c.field-meta.xml
<CustomField>
    <fullName>Xebo_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Xebo Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>