MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Xebo_Last_Date__c.field-meta.xml
<CustomField>
    <fullName>Xebo_Last_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Xebo Last Date</label>
    <type>Date</type>
</CustomField>