MODON MRE BPDEV/force-app/main/default/objects/BusinessAccount/fields/Xebo_Request__c.field-meta.xml
<CustomField>
    <fullName>Xebo_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Xebo Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>